Retoques a ejercicio y algunas depuraciones

--- a/app/Resources/views/ejercicio/new.html.twig
+++ b/app/Resources/views/ejercicio/new.html.twig
@@ -31,12 +31,15 @@
                         {{ form_errors(form.enunciado) }}
                         {{ form_widget(form.enunciado) }}
                     </div>
-                        
-                    <div class="form-group col-md-6 col-xs-12" ng-init="{% for i in form.respuestas %}addRespuesta('{{ i.expresion.vars.value}}');{% endfor %}">
+                    <div class="form-group col-md-6 col-xs-12" ng-init="{% for i in form.respuestas %}addRespuesta('{{ i.expresion.vars.value}}','{{ i.correcta.vars.checked}}');{% endfor %}">
                         {{ form_label(form.respuestas) }}
                         {{ form_errors(form.respuestas) }}
+                        <p>Mínimo 2</p>
                         <fieldset data-ng-repeat="respuesta in respuestas">
                             <div class="input-group">
+                                <span class="input-group-addon">
+                                    <input type="checkbox" id="[[ 'ejercicio_respuestas_'+$index+'_correcta' ]]" name="[['ejercicio[respuestas]['+$index+'][correcta]' ]]" value="1" ng-checked="isSelected([[$index]])" ng-click="selectAction([[$index]])" >
+                                </span>
                                 <span class="form-control">[[ respuesta.expresion ]]</span>
                                 <span class="input-group-btn">
                                     <a class="btn btn-default btn-flat" data-toggle="modal" data-target="#respuestaModal" ng-click="editAction([[$index]])"><i class="fa fa-edit text-yellow"></i></a>
@@ -91,9 +94,28 @@
     {{ parent() }}
     <script src="{{asset('bundles/app/plugins/ckeditor/ckeditor.js')}}"></script>
     <script src="{{ asset('bundles/app/plugins/select2/select2.full.min.js') }}"></script>
+    <script src="{{ asset('bundles/app/plugins/jQuery/jquery.validate.min.js') }}"></script>
     <script>
         $(function () {/*Initialize Select2 Elements*/$(".select2").select2();});
         var urlMath = "{{ asset('bundles/app/plugins/MathJax/MathJax.js?config=TeX-AMS_HTML') }}";
+
+$("#ejercicio").validate({
+  ignore: 'input[type=hidden]',
+  rules:
+  {
+      ejercicio_tema: { required: true },
+      ejercicio_enunciado: { required: true }
+  },
+  errorPlacement: function (error, element) {
+      $(element).parent().addClass('has-error');
+  },
+  success: function (label, element) {
+      $(element).parent().removeClass('has-error');
+  },
+  submitHandler: function(form) {
+      alert("validation ok");
+  }
+});
     </script>
     {% javascripts
         '@AppBundle/Resources/public/angularjs/newEjercicio/newEjercicioModule.js'
