arreglos de aspecto

--- a/app/Resources/views/estudiante/index.html.twig
+++ b/app/Resources/views/estudiante/index.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Estudiantes{% endblock %}
 {% block body %}
 <section class="content-header">
-    <h1 class="box-title">Ejercicios</h1>
+    <h1 class="box-title">Estudiantes</h1>
 </section>
 <section class="content">
 <div class="box">
