--- a/app/Resources/views/ejercicio/index.html.twig
+++ b/app/Resources/views/ejercicio/index.html.twig
@@ -26,7 +26,7 @@
                             <td><a href="{{ path('ejercicio_show', { 'id': ejercicio.id }) }}">{{ ejercicio.id }}</a></td>
                             <td>{{ ejercicio.tema }}</td>
                             <td>{{ CONST['DIFICULTADES'][ejercicio.dificultad] }}</td>
-                            <td>{% if ejercicio.estado is defined %}<span title="Activo" class="bg-green">Activo</span>{% else %}<span title="Inactivo"class="bg-red">Inactivo</span>{% endif %}</td>
+                            <td>{% if ejercicio.estado %}<span title="Activo" class="bg-green">Activo</span>{% else %}<span title="Inactivo"class="bg-red">Inactivo</span>{% endif %}</td>
                             <td><a class="btn btn-warning btn-flat pull-right" href="{{ path('ejercicio_edit', { 'id': ejercicio.id }) }}"><i class="fa fa-edit"></i>&nbsp;Editar</a></td>
                         </tr>
                     {% endfor %}
