--- a/app/Resources/views/practica/index.html.twig
+++ b/app/Resources/views/practica/index.html.twig
@@ -1,39 +1,84 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}Practicas{% endblock %}
 {% block body %}
-    <h1>Practica list</h1>
+<section class="content-header">
+    <h1 class="box-title">Practicas</h1>
+</section>
+<section class="content">
+<div class="box">
+    <div class="box-body">
+        <div class="table-responsive">
+            <table id="tabla-practicas" class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Calificación</th>
+                        <th>Estado</th>
+                        <th>Estudiante</th>
+                        <th>Operación</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for practica in practicas %}
+                        <tr>
+                            <td><a href="{{ path('practica_show', { 'id': practica.id }) }}">{{ practica.id }}</a></td>
+                            <td>{{ 'no disponible' }}</td>
+                            <td>{% if practica.finalizada %}<span title="Activo" class="bg-green">Finalizada</span>{% else %}<span title="Inactivo"class="bg-yellow">Iniciada</span>{% endif %}</td>
+                            <td>{{ 'no disponible' }}</td>
+                            <td><a class="btn btn-default btn-flat" href="{{ path('practica_show', { 'id': practica.id }) }}"><i class="fa fa-eye"></i>&nbsp;Ver</a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+</section>
+{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('bundles/app/plugins/datatables/dataTables.bootstrap.css') }}">
+{% endblock %}
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Inicio</th>
-                <th>Fin</th>
-                <th>Puntuacion</th>
-                <th>Dificultad</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for practica in practicas %}
-            <tr>
-                <td><a href="{{ path('practica_show', { 'id': practica.id }) }}">{{ practica.id }}</a></td>
-                <td>{% if practica.inicio %}{{ practica.inicio|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if practica.fin %}{{ practica.fin|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('practica_show', { 'id': practica.id }) }}">show</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('practica_new') }}">Create a new entry</a>
-        </li>
-    </ul>
+{% block javascripts %}
+    {{ parent() }}  
+    <script src="{{ asset('bundles/app/plugins/datatables/jquery.dataTables.min.js')}}"></script>
+    <script src="{{ asset('bundles/app/plugins/datatables/dataTables.bootstrap.min.js')}}"></script>
+
+    <script> $(document).ready(function() {
+        $('#tabla-practicas').DataTable({
+            //"responsive": true,
+            //"scrollX": true,
+            "language": {
+                "sProcessing":     "Procesando...",
+                "sLengthMenu":     "Mostrar _MENU_",
+                "sZeroRecords":    "No se encontraron resultados",
+                "sEmptyTable":     "Ningún dato disponible",
+                "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ practicas",
+                "sInfoEmpty":      "Mostrando del 0 al 0 de un total de 0 practicas",
+                "sInfoFiltered":   "(filtrado de un total de _MAX_ practicas)",
+                "sInfoPostFix":    "",
+                "sSearch":         "Buscar:",
+                "sUrl":            "",
+                "sInfoThousands":  ",",
+                "sLoadingRecords": "Cargando...",
+                "oPaginate": {
+                    "sFirst":    "Primero",
+                    "sLast":     "Último",
+                    "sNext":     "Siguiente",
+                    "sPrevious": "Anterior"
+                },
+                "oAria": {
+                    "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+                    "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+                }
+            }
+        });
+    } );
+    </script>    
+    {% javascripts
+        '@AppBundle/Resources/public/angularjs/loadModule.js'%}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
