detalles de vistas

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -25,7 +25,7 @@
             <li class="divider"></li>
             <li><a href="{{ path('ejercicio_index')}}"><i class="fa fa-circle-o"></i>Ejercicios</a></li>
             <li class="divider"></li>
-            <li><a href="{{ path('expresionmatematica_index')}}"><i class="fa fa-circle-o"></i>Expresiones Matematicas</a></li>
+            <li><a href="{{ path('ejercicio_index')}}"><i class="fa fa-circle-o"></i>Expresiones Matematicas</a></li>
           </ul>
         </li>
         {% endif %}
