--- a/app/Resources/views/practica/index.html.twig
+++ b/app/Resources/views/practica/index.html.twig
@@ -24,7 +24,7 @@
                             <td><a href="{{ path('practica_show', { 'id': practica.id }) }}">{{ practica.id }}</a></td>
                             <td>{{ 'no disponible' }}</td>
                             <td>{% if practica.finalizada %}<span title="Activo" class="bg-green">Finalizada</span>{% else %}<span title="Inactivo"class="bg-yellow">Iniciada</span>{% endif %}</td>
-                            <td>{{ 'no disponible' }}</td>
+                            <td><a href="{{ path('estudiante_show', { 'id': practica.estudiante.id }) }}">{{ practica.estudiante.usuario.username}}</a></td>
                             <td><a class="btn btn-default btn-flat" href="{{ path('practica_show', { 'id': practica.id }) }}"><i class="fa fa-eye"></i>&nbsp;Ver</a></td>
                         </tr>
                     {% endfor %}
