--- a/app/Resources/views/practica/start.html.twig
+++ b/app/Resources/views/practica/start.html.twig
@@ -1,53 +1,45 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+<div ng-controller="startPracticaController">
     <section class="content-header">
         <h1>Practica&nbsp;<small class="label bg-blue">{{practica.id}}</small>
-            {% if practica.finalizada %}<span title="Finalizada" class="bg-green" style="float: right;">Finalizada</span>{% else %}<span title="Iniciada"class="bg-yellow" style="float: right;">Iniciada</span>{% endif %}
+            {% if practica.finalizada %}<span class="label label-warning pull-right">Finalizada</span>{% else %}<span class="label label-warning pull-right">Ejercicio {{actual + 1}} de {{practica.data|length }}</span>{% endif %}
         </h1>
     </section>
     <section class="content">
         <div class="box box-primary">
             <div class="box-body">
-                {% if practica.finalizada %}
-                <div class="form-group col-md-6">
-                    <label class="col-xs-12 control-label">Calificación</label> 
-                    <div class="col-xs-12">
-                        <h4  class="form-control-static">{{ practica.calificacion }}</h4>
-                    </div>
-                </div>
-                <div class="form-group col-md-6">
-                    <label class="col-xs-12 control-label">Duración</label> 
-                    <div class="col-xs-12">
-                        <p class="form-control-static">{{ practica.duracion }}</p>
-                    </div>
-                </div>
-            {% endif %}
-                    <div class="form-group">
+                <h4 class="col-md-4"><i class="fa fa-check"></i> Aciertos <small class="label label-default">{{ practica.calificacion }}%</small></h4>
+                <h4 class="col-md-4">Dificultad <small class="label label-default">{{ practica.data[0]['ejercicio'].dificultadString }}</small></h4>
+                <h4 class="col-md-4"><i class="fa fa-book"></i> Tema <a href="{{ path('tema_show', {'id': practica.data[0]['ejercicio'].tema.id }) }}">{{ practica.data[0]['ejercicio'].tema.nombre }}</a></h4>
+                <br><br>
+                    <div class="form-group col-xs-12" ng-init="{% for i in practica.data[actual]['ejercicio'].respuestas %}addRespuesta('{{ i.expresion}}','null');{% endfor %}">
                         <div>
-                            {{ practica.data[0]['ejercicio'].enunciado|raw }}
+                            {{ practica.data[actual]['ejercicio'].enunciado|raw }}
                         </div>
                         <ul class="list-group">
-                            {% for opcion in practica.data[0]['ejercicio'].respuestas %}
+                            {% for opcion in practica.data[actual]['ejercicio'].respuestas %}
                                 <li class="list-group-item col-md-6 col-xs-12">
                                     <div class="input-group">
                                         <span class="input-group-addon">
-                                            <input type="checkbox" id="[[ 'ejercicio_respuestas_'+$index+'_correcta' ]]" name="[['ejercicio[respuestas]['+$index+'][correcta]' ]]" value="1" ng-checked="isSelected([[$index]])" ng-click="selectAction([[$index]])" >
+                                            <input type="checkbox" id="ejercicio_respuestas_{{loop.index0}}_correcta" value="1" ng-checked="isSelected({{loop.index0}})" ng-click="selectAction({{loop.index0}})" >
                                         </span>
-                                        <span class="form-control">{{ opcion.expresion|raw }}[[ respuesta.expresion ]]</span>
+                                        <div class="form-control">{{ opcion.expresion|raw }} {#[[ respuesta.expresion ]]#}</div>
                                     </div>
                                 </li>
                             {% endfor %}
                         </ul>
                     </div>
             </div>
-            <div class="box-footer">
-                <a class="btn btn-default btn-flat" href="{{ path('practica_index') }}"><i class="fa fa-arrow-left"></i>&nbsp;ir a lista</a>
+            <div class="box-footer" style="text-align: center;">
+                {{ form_start(form) }}
+                    {{ form_widget(form.seleccion)}}
+                    <button ng-disabled="isValid()" type="submit" id="practica_submit" name="practica[submit]" class="btn btn-success ">Siguiente</button>
+                    {{ form_widget(form._token) }}
+                {{ form_end(form, {'render_rest': false}) }}
             </div>
         </div>
     </section>
-    {{ form_start(start_form) }}
-                <input type="submit" value="start">
-            {{ form_end(start_form) }}
 {% endblock %}
 
 {% block javascripts %}
