--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -47,13 +47,13 @@
               <li class="user-header">
                 <img src="{{asset('bundles/app/dist/img/avatar.png')}}" class="img-circle" alt="User Image">
                 <p>
-                  {{app.user.username}}&nbsp;{{app.user.username}}
+                  {{app.user.username}}
                 </p>
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="{{ path('fos_user_profile_show') }}" class="btn btn-default btn-flat">Perfil</a>
+                  <a href="{{ path('fos_user_profile_show') }}" class="btn btn-default btn-flat">Cuenta</a>
                 </div>
                 <div class="pull-right">
                   <a href="{{ path('fos_user_security_logout') }}" class="btn btn-default btn-flat">Salir</a>
